src/packages/core/src/textarea/textarea.css
._e_textarea {
  resize: vertical;

  & ._e_input__label {
    background-color: var(--N50);
    transition:
      background-color 50ms ease-out,
      transform 200ms cubic-bezier(0, 0, 0.2, 1);

    &:after {
      position: absolute;
      top: 100%;
      left: 0;
      content: "";
      display: block;
      width: 100%;
      height: 3px;
      background-color: var(--N50);
      transition: background-color 50ms ease-out;
    }
  }

  & ._e_input__field:hover ._e_input__label {
    background-color: var(--N100);

    &:after {
      background-color: var(--N100);
    }
  }

  & ._e_input__control:focus ~ ._e_input__label {
    background-color: var(--N50);

    &:after {
      background-color: var(--N50);
    }
  }
}

